src/a3/Syntaxerkenner_a2_.g4
grammar Syntaxerkenner_a2_;
import Lexer;

prog    : stat+;
stat    : decl? NL;
decl    : (ID '=')? comp;
comp    : expr (('<' | '>') expr)*;
expr    : term (('+' | '-') term)*;
term    : pow (('*' | '/') pow)*;
pow     : <assoc=right> fact ('^' pow)*;
fact    : ('+' | '-') fact | '(' expr ')' | INT;
